--- a/jicofo-node/package.json
+++ b/jicofo-node/package.json
@@ -15,13 +15,15 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "config": "^3.3.9",
-    "winston": "^3.8.2",
     "@xmpp/client": "^0.13.1",
-    "express": "^4.18.2"
+    "config": "^3.3.9",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "chai": "^5.2.1",
+    "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3"
   }
 }
