--- a/jicofo-node/package.json
+++ b/jicofo-node/package.json
@@ -19,6 +19,7 @@
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
