to run jicofo locally with xmpp at localhost

--- a/jicofo-selector/src/main/resources/reference.conf
+++ b/jicofo-selector/src/main/resources/reference.conf
@@ -1,3 +1,5 @@
+//jicofo.xmpp.client.domain = "localhost"
+//org.jitsi.jicofo.FOCUS_USER_DOMAIN = "localhost"
 jicofo {
   // Authentication with external services
   authentication {
@@ -416,9 +418,9 @@ jicofo {
       hostname = "localhost"
       port = 5222
       # The domain to use for login.
-      #domain =
+      domain = "localhost"
       # The domain where XMPP pings will be sent and where components will be discovered.
-      #xmpp-domain =
+      xmpp-domain = "localhost"
       username = "focus"
       resource = ${jicofo.xmpp.client.username}
       #password =
