--- a/jicofo-node/package.json
+++ b/jicofo-node/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "^5.2.1",
     "mocha": "^10.2.0",
-    "proxyquire": "^2.1.3"
+    "proxyquire": "^2.1.3",
+    "sinon": "^21.0.0"
   }
 }
