restore the reference.conf so that test in build process will work copy localhost.reference.conf -- this is to be used for localhost

--- a/jicofo-selector/src/main/resources/localhost.reference.conf
+++ b/jicofo-selector/src/main/resources/localhost.reference.conf
@@ -416,9 +416,9 @@ jicofo {
       hostname = "localhost"
       port = 5222
       # The domain to use for login.
-      #domain
+      domain = "localhost"
       # The domain where XMPP pings will be sent and where components will be discovered.
-      #xmpp-domain
+      xmpp-domain = "localhost"
       username = "focus"
       resource = ${jicofo.xmpp.client.username}
       #password =
